log

vi., 11 de mar. de 2022 11:21:37: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
efb86b3
vi., 11 de mar. de 2022 11:23:56: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
859ced4
vi., 11 de mar. de 2022 11:26:37: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup2' defined but not used [-Werror=unused-function]
 char * _strdup2(const char * str) {
        ^~~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5230864
vi., 11 de mar. de 2022 11:30:36: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup2' defined but not used [-Werror=unused-function]
 char * _strdup2(const char * str) {
        ^~~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
839443a
vi., 11 de mar. de 2022 11:31:54: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9e35585
vi., 11 de mar. de 2022 11:32:50: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
bc8a46e
vi., 11 de mar. de 2022 11:45:16: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:39:8: error: unused variable 'aux' [-Werror=unused-variable]
    int aux = n -m ;
        ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
cca3860
vi., 11 de mar. de 2022 11:59:05: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:58:40: error: implicit declaration of function 'sinzeof' [-Werror=implicit-function-declaration]
    Persona* sujeto =(Persona*) malloc (sinzeof(Persona) );
                                        ^~~~~~~
exercises.c:58:48: error: expected expression before 'Persona'
    Persona* sujeto =(Persona*) malloc (sinzeof(Persona) );
                                                ^~~~~~~
exercises.c:59:4: error: implicit declaration of function 'strepy' [-Werror=implicit-function-declaration]
    strepy(sujeto -> nombre, nombre );
    ^~~~~~
exercises.c: At top level:
exercises.c:61:11: error: expected '=', ',', ';', 'asm' or '__attribute__' before '->' token
    sujeto -> edad = edad;
           ^~
exercises.c:62:4: error: expected identifier or '(' before 'return'
    return sujeto;
    ^~~~~~
exercises.c:63:1: error: expected identifier or '(' before '}' token
 }
 ^
exercises.c: In function 'crearPersona':
exercises.c:60:4: error: control reaches end of non-void function [-Werror=return-type]
    strepy(sujeto -> rut , rut );}
    ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f0bd761
vi., 11 de mar. de 2022 11:59:58: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:58:40: error: implicit declaration of function 'sinzeof' [-Werror=implicit-function-declaration]
    Persona* sujeto =(Persona*) malloc (sinzeof(Persona*) );
                                        ^~~~~~~
exercises.c:58:48: error: expected expression before 'Persona'
    Persona* sujeto =(Persona*) malloc (sinzeof(Persona*) );
                                                ^~~~~~~
exercises.c:59:4: error: implicit declaration of function 'strepy' [-Werror=implicit-function-declaration]
    strepy(sujeto -> nombre, nombre );
    ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b689048
vi., 11 de mar. de 2022 12:01:46: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:58:40: error: implicit declaration of function 'sinzeof' [-Werror=implicit-function-declaration]
    Persona* sujeto =(Persona*) malloc (sinzeof(Persona) );
                                        ^~~~~~~
exercises.c:58:48: error: expected expression before 'Persona'
    Persona* sujeto =(Persona*) malloc (sinzeof(Persona) );
                                                ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c4a051e
vi., 11 de mar. de 2022 16:27:13: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
9ea4a32
